--- a/index.html
+++ b/index.html
@@ -16,14 +16,28 @@
 	<header>
 		<h1>Logo</h1>
 		<ul>
-			<li>Log In</li>
-			<li>Sing Up</li>
+			<li onclick="logIn()">Log In</li>
+			<li onclick="signUp()">Sing Up</li>
 		</ul>
 	</header>
 
 	<main>
 		<p>Logue para visualizar esta página</p>
 	</main>
+
+	<div class="informations">
+		<h2>Forneça email e senha: </h2>
+
+		<p>E-mail:</p>
+		<input placeholder="ex: email@exemplo.com" id="inputEmail" type="text">
+		<p>Senha:</p>
+		<input placeholder="Acima de 6 carácteres" id="inputSenha" type="text">
+
+		<div class="buttons">
+			<button>Enviar</button>
+			<button>Cancelar</button>
+		</div>
+	</div> <!-- informations -->
 
 	<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
