sign / cancel completely functional

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 		id="inputSenha" 
 		type="text">
 
+		<div class="errormsg"></div>
+
 		<div class="buttons">
 			<button id="enviarButton">Enviar</button>
 			<button id="cancelarButton">Cancelar</button>
