small changes, error on screen for user

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<h2>Forneça email e senha: </h2>
 
 		<p>E-mail:</p>
-		<input placeholder="ex: email@exemplo.com" 
+		<input placeholder="Ex: email@exemplo.com" 
 		id="inputEmail" 
 		type="text">
 
