added log out functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<header>
 		<h1>Logo</h1>
 		<ul>
+			<li class="displayNone" onclick="logOut()">log Out</li>
 			<li onclick="logIn()">Log In</li>
 			<li onclick="signUp()">Sing Up</li>
 		</ul>
